@@ -1,3 +1,8 @@
+2005-12-08 Kimmo
+ PATCH: [ 1375564 ] New encoding FAQ (UTF-8)
+  Submitted by Perry
+  Manual: Faq.xml
+
 2005-11-09 Kimmo
  PATCH: [ 1351769 ] Manual: Minor update to file compare chapter
   Manual: Compare_files.xml
